--- a/ula_mips/ula_mips.qsf
+++ b/ula_mips/ula_mips.qsf
@@ -37,8 +37,8 @@
 # -------------------------------------------------------------------------- #
 
 
-set_global_assignment -name FAMILY "Cyclone V"
-set_global_assignment -name DEVICE 5CGXFC7C7F23C8
+set_global_assignment -name FAMILY "Cyclone IV E"
+set_global_assignment -name DEVICE EP4CE115F29C7
 set_global_assignment -name TOP_LEVEL_ENTITY mips_teste
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 16.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:39:37  OCTOBER 11, 2018"
@@ -73,4 +73,6 @@ set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name VHDL_INPUT_VERSION VHDL_2008
 set_global_assignment -name VHDL_SHOW_LMF_MAPPING_MESSAGES OFF
 set_global_assignment -name VHDL_FILE mux2de5.vhd
+set_global_assignment -name MIF_FILE ROM.mif
+set_global_assignment -name MIF_FILE RAM.mif
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
