--- a/ula_mips/ula_mips.qsf
+++ b/ula_mips/ula_mips.qsf
@@ -40,7 +40,7 @@
 set_global_assignment -name TOP_LEVEL_ENTITY mips_teste
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 16.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:39:37  OCTOBER 11, 2018"
-set_global_assignment -name LAST_QUARTUS_VERSION "16.1.0 Lite Edition"
+set_global_assignment -name LAST_QUARTUS_VERSION 16.0.0
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
 set_global_assignment -name VHDL_FILE ula_mips.vhd
