--- a/ula_mips/ula_mips.qsf
+++ b/ula_mips/ula_mips.qsf
@@ -40,31 +40,15 @@
 set_global_assignment -name TOP_LEVEL_ENTITY mips_teste
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 16.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:39:37  OCTOBER 11, 2018"
-set_global_assignment -name LAST_QUARTUS_VERSION 16.0.0
+set_global_assignment -name LAST_QUARTUS_VERSION "18.0.0 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
-set_global_assignment -name VHDL_FILE ula_mips.vhd
-set_global_assignment -name VHDL_FILE mux2.vhd
-set_global_assignment -name VHDL_FILE full_adder.vhd
-set_global_assignment -name VHDL_FILE mux4.vhd
-set_global_assignment -name VHDL_FILE ula_ctrl.vhd
-set_global_assignment -name VHDL_FILE fd_ctrl.vhd
-set_global_assignment -name VHDL_FILE mips_teste.vhd
-set_global_assignment -name VHDL_FILE bancoRegistradores.vhd
-set_global_assignment -name VHDL_FILE shifter.vhd
-set_global_assignment -name VHDL_FILE estendeSinal.vhd
-set_global_assignment -name VHDL_FILE somador.vhd
-set_global_assignment -name VHDL_FILE PC.vhd
-set_global_assignment -name VHDL_FILE memoria_de_dados.vhd
-set_global_assignment -name VHDL_FILE memoria_de_instrucoes.vhd
-set_global_assignment -name VHDL_FILE shifter26.vhd
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name VHDL_INPUT_VERSION VHDL_2008
 set_global_assignment -name VHDL_SHOW_LMF_MAPPING_MESSAGES OFF
-set_global_assignment -name VHDL_FILE mux2de5.vhd
 
 #============================================================
 # Build by Altera University Program
@@ -1250,6 +1234,24 @@ set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
+set_global_assignment -name VHDL_FILE ../../Clock_descomp/registrador.vhd
+set_global_assignment -name VHDL_FILE ula_mips.vhd
+set_global_assignment -name VHDL_FILE mux2.vhd
+set_global_assignment -name VHDL_FILE full_adder.vhd
+set_global_assignment -name VHDL_FILE mux4.vhd
+set_global_assignment -name VHDL_FILE ula_ctrl.vhd
+set_global_assignment -name VHDL_FILE fd_ctrl.vhd
+set_global_assignment -name VHDL_FILE mips_teste.vhd
+set_global_assignment -name VHDL_FILE bancoRegistradores.vhd
+set_global_assignment -name VHDL_FILE shifter.vhd
+set_global_assignment -name VHDL_FILE estendeSinal.vhd
+set_global_assignment -name VHDL_FILE somador.vhd
+set_global_assignment -name VHDL_FILE PC.vhd
+set_global_assignment -name VHDL_FILE memoria_de_dados.vhd
+set_global_assignment -name VHDL_FILE memoria_de_instrucoes.vhd
+set_global_assignment -name VHDL_FILE shifter26.vhd
+set_global_assignment -name VHDL_FILE mux2de5.vhd
 set_global_assignment -name VHDL_FILE conversorHex7Seg.vhd
 set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform.vwf
+set_global_assignment -name VHDL_FILE decoder.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
